--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://43.207.119.20:9000/</sonar.host.url>
-		<sonar.login>squ_ebaf2e99f6d60b7dfe76a114765b288a2ce0cd9b</sonar.login>
-		<sonar.password>passw0rd</sonar.password> 
+		<sonar.host.url>http://54.236.106.109:9000//</sonar.host.url>
+		<sonar.login>squ_5bd01589297fa7f20f9d81eff50f84358b006489</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
